# narrator

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: pronunciation.yaml  settings.yaml
docs/: build-brief.md
narrator/: audio.py  chunk.py  cli.py  config.py  generate.py  normalize.py  reference.py  stitch.py  transcribe.py
narrator/engines/: __init__.py  base.py  chatterbox.py  fake.py
tests/: test_chunk.py  test_cli.py  test_config.py  test_engine.py  test_generate.py  test_normalize_story.py  test_normalize_text.py  test_reference.py  test_stitch.py
